--- a/app/css/main.css
+++ b/app/css/main.css
@@ -705,6 +705,132 @@ input[type=number] {
   display: none;
 }
 
+.check {
+  display: none;
+}
+
+.filters__form--container {
+  padding: 20px 20px 20px 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background-color: #2D2D2D;
+}
+
+.filter__status--label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  min-height: 36px;
+  position: relative;
+  cursor: pointer;
+  padding-left: 60px;
+}
+
+.filter__status--label:first-child {
+  margin-bottom: 12px;
+}
+
+.filter-status {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  color: var(--white-color);
+}
+
+.check + .check-custom {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  width: 36px;
+  height: 36px;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  background-color: var(--white-color);
+  border: 4px solid var(--black2-color);
+  text-align: center;
+  -webkit-transition: border-color 0.2s ease-in-out;
+  -o-transition: border-color 0.2s ease-in-out;
+  transition: border-color 0.2s ease-in-out;
+}
+
+.check + .check-custom:focus {
+  border-color: var(--orange-color);
+}
+
+.check + .check-custom:hover {
+  border-color: var(--orange-color);
+}
+
+.check:checked + .check-custom {
+  border-color: var(--orange-color);
+}
+
+.check + .check-custom::before {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background-color: var(--orange-color);
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -o-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.check:checked + .check-custom::before {
+  opacity: 1;
+}
+
+.filters__form--btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 28px 12px;
+  background-color: #000000;
+}
+
+.filters__form--btn {
+  width: 114px;
+  height: 40px;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: var(--white-color);
+  border: 4px solid var(--orange-color);
+  text-align: center;
+}
+
+.filters__info {
+  padding: 12px;
+  background-color: var(--orange-color);
+}
+
+.filters__info--descr {
+  margin: 0;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  color: var(--white-color);
+}
+
 .header {
   background-color: #0E0E0E;
   padding: 24px 0 18px 0;
