--- a/src/scss/_filters.scss
+++ b/src/scss/_filters.scss
@@ -60,4 +60,110 @@
   display: none;
  }
 
+ .check {
+  display: none;
+}
+
+.filters__form--container {
+  padding: 20px 20px 20px 12px;
+  display: flex;
+  flex-direction: column;
+  background-color: #2D2D2D;
+}
+
+.filter__status--label {
+  display: flex;
+  align-items: center;
+  min-height: 36px;
+  position: relative;
+  cursor: pointer;
+  padding-left: 60px;
+}
+
+.filter__status--label:first-child {
+  margin-bottom: 12px;
+}
+
+.filter-status {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  color: var(--white-color);
+}
+
+.check+.check-custom {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  width: 36px;
+  height: 36px;
+  transform: translateY(-50%);
+  background-color: var(--white-color);
+  border: 4px solid var(--black2-color);
+  text-align: center;
+  transition: border-color 0.2s ease-in-out;
+}
+
+.check+.check-custom:focus {
+  border-color: var(--orange-color);
+}
+
+.check+.check-custom:hover {
+  border-color: var(--orange-color);
+}
+
+.check:checked+.check-custom {
+  border-color: var(--orange-color);
+}
+
+.check+.check-custom::before {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background-color: var(--orange-color);
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.check:checked+.check-custom::before {
+  opacity: 1;
+}
+
+.filters__form--btns {
+  display: flex;
+  justify-content: space-between;
+  padding: 28px 12px;
+  background-color: #000000;
+}
+
+.filters__form--btn {
+  width: 114px;
+  height: 40px;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: var(--white-color);
+  border: 4px solid var(--orange-color);
+  text-align: center;
+}
+
+.filters__info {
+  padding: 12px;
+  background-color: var(--orange-color);
+}
+
+.filters__info--descr {
+  margin: 0;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  color: var(--white-color);
+}
+
+
 
