--- a/src/scss/components/_products.scss
+++ b/src/scss/components/_products.scss
@@ -3,8 +3,14 @@
    padding: 90px 0;
    background-color: #EDEDED;
 
+   &__wrapper {
+      display: flex;
+      justify-content: space-between;
+   }
+
    &__aside {
       max-width: 264px;
+      margin-right: 24px;
    }
 
    &__title {
@@ -105,5 +111,98 @@
       color: var(--white-color);
       background-color: #000000;
    }
+
+   &__list {
+      margin-bottom: 36px;
+      display: grid;
+      grid-auto-columns: 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+      gap: 24px 24px;
+   }
+
+   &__item {
+      min-width: 264px;
+      flex-direction: column;
+      align-items: flex-start;
+   }
+
+   &__img {
+      width: 100%;
+      min-height: calc(356px / 2);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0;
+      background-color: var(--white-color);
+   }
+
+   &__content {
+      width: 100%;
+      min-height: 172px;
+      padding: 20px 12px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      flex-grow: 1;
+      background-color: var(--black2-color);
+   }
+
+   &__subtitle {
+      margin: 0;
+      margin-bottom: 12px;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 20px;
+      color: var(--white-color);
+   }
+
+   &__descr {
+      margin: 0;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 15px;
+      color: var(--white-color);
+   }
+
+   &__link {
+      margin-top: auto;
+   }
+
+   &__text--descr {
+      margin: 0;
+      margin-bottom: 20px;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 20px;
+      color: var(--black2-color);
+   }
+
+   &__text--mb {
+      display: block;
+      margin-bottom: 20px;
+   }
+
+   &__list--advantages {
+      margin-bottom: 12px;
+   }
+
+   &__item--advantages:not(:last-child) {
+      margin-bottom: 8px;
+   }
+
+   &__link--advantages {
+      display: flex;
+      align-items: center;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 20px;
+      color: var(--black2-color);
+   }
+
+   &__link--advantages svg {
+      margin-right: 8px;
+   }
+
 
 }
