--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1840,4 +1840,100 @@ input[type=number] {
 .products__link--advantages svg {
   margin-right: 8px;
 }
+
+.card {
+  border: 4px solid #A5A5A5;
+}
+.card__content {
+  background-color: white;
+}
+.card__subtitle {
+  margin: 0;
+  margin-bottom: 20px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 25px;
+  color: var(--black2-color);
+}
+.card__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.card__price--old {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #A5A5A5;
+  text-decoration: line-through;
+}
+.card__price--new {
+  display: block;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 35px;
+  color: var(--black2-color);
+}
+.card__descr {
+  margin: 0;
+  margin-bottom: 18px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  color: #A5A5A5;
+}
+.card__controls {
+  margin-bottom: 20px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.card__calc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-height: 44px;
+  max-width: 164px;
+}
+.card__calc input {
+  max-width: 84px;
+  height: 100%;
+  border: 4px solid #A5A5A5;
+  text-align: center;
+  background-color: var(--white-color);
+}
+.card__btn--control {
+  width: 44px;
+  height: 100%;
+}
+.card .btn-minus {
+  border-left: 4px solid #A5A5A5;
+  border-top: 4px solid #A5A5A5;
+  border-bottom: 4px solid #A5A5A5;
+}
+.card .btn-plus {
+  border-right: 4px solid #A5A5A5;
+  border-top: 4px solid #A5A5A5;
+  border-bottom: 4px solid #A5A5A5;
+}
+.card__link {
+  width: 100%;
+  color: var(--orange-color);
+  text-align: center;
+  margin-top: auto;
+}
+.card__link:hover {
+  color: var(--white-color);
+}
 /*# sourceMappingURL=main.css.map */
