--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import "nouislider";
 @import "filters";
 
+
 // подключения компонентов страницы
 @import "./components/header";
 @import "./components/hero";
@@ -18,4 +19,5 @@
 @import "./components/partners";
 @import "./components/footer";
 @import "./components/products";
+@import "./components/card";
 
